# technitium-dns-bot

./: .gitattributes  .gitignore  CLAUDE.md  INSTALL.sh  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
deploy/: technitium-bot.service
docs/: DEPLOY.md  RELEASE.md
examples/: config.example.yaml  rules.example.yaml  sample-list.json
scripts/: config_tool.py  ttbot
src/ttbot/: __init__.py  __main__.py  bot.py  config.py  domains.py  lists.py  reconciler.py  rules.py  state.py  technitium.py
tests/: conftest.py  test_config.py  test_domains.py  test_lists.py  test_reconciler.py  test_rules.py  test_state.py  test_technitium.py
